--- a/251_300.md
+++ b/251_300.md
@@ -942,9 +942,553 @@ Why are the other answers wrong?
 - [ ] D. AWS CLI is less efficient than AWS Backup for managing backups and lifecycle.
 </details>
 
+<details>
+  <summary>Question 280</summary>
 
+A company is using Amazon CloudFront with its website. The company has enabled logging on the CloudFront distribution, and logs are saved in one of the company's Amazon S3 buckets. The company needs to perform advanced analyses on the logs and build visualizations. What should a solutions architect do to meet these requirements?
 
+- [ ] A. Use standard SQL queries in Amazon Athena to analyze the CloudFront logs in the S3 bucket. Visualize the results with AWS Glue.
+- [ ] B. Use standard SQL queries in Amazon Athena to analyze the CloudFront logs in the S3 bucket. Visualize the results with Amazon QuickSight.
+- [ ] C. Use standard SQL queries in Amazon DynamoDB to analyze the CloudFront logs in the S3 bucket. Visualize the results with AWS Glue.
+- [ ] D. Use standard SQL queries in Amazon DynamoDB to analyze the CloudFront logs in the S3 bucket. Visualize the results with Amazon QuickSight.
 
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Use standard SQL queries in Amazon Athena to analyze the CloudFront logs in the S3 bucket. Visualize the results with Amazon QuickSight.
+
+Why these are the correct answers:
+
+B. Use standard SQL queries in Amazon Athena to analyze the CloudFront logs in the S3 bucket. Visualize the results with Amazon QuickSight.
+
+Why are the other answers wrong?
+
+- [ ] A. AWS Glue is primarily a data integration service, not a visualization tool.
+- [ ] C. Amazon DynamoDB is a NoSQL database, not designed for SQL queries on S3 logs.
+- [ ] D. Amazon DynamoDB is a NoSQL database, not designed for SQL queries on S3 logs, and Glue is not a visualization tool.
+</details>
+<details>
+  <summary>Question 281</summary>
+
+A company runs a fleet of web servers using an Amazon RDS for PostgreSQL DB instance. After a routine compliance check, the company sets a standard that requires a recovery point objective (RPO) of less than 1 second for all its production databases. Which solution meets these requirements?
+
+- [ ] A. Enable a Multi-AZ deployment for the DB instance.
+- [ ] B. Enable auto scaling for the DB instance in one Availability Zone.
+- [ ] C. Configure the DB instance in one Availability Zone, and create multiple read replicas in a separate Availability Zone.
+- [ ] D. Configure the DB instance in one Availability Zone, and configure AWS Database Migration Service (AWS DMS) change data capture (CDC) tasks.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Enable a Multi-AZ deployment for the DB instance.
+
+Why these are the correct answers:
+
+A. Enable a Multi-AZ deployment for the DB instance.
+
+Why are the other answers wrong?
+
+- [ ] B. Auto Scaling doesn't provide RPO of less than 1 second.
+- [ ] C. Read replicas are for scaling reads, not DR with RPO of less than 1 second.
+- [ ] D. DMS CDC is not designed for RPO of less than 1 second.
+</details>
+<details>
+  <summary>Question 282</summary>
+
+A company runs a web application that is deployed on Amazon EC2 instances in the private subnet of a VPC. An Application Load Balancer (ALB) that extends across the public subnets directs web traffic to the EC2 instances. The company wants to implement new security measures to restrict inbound traffic from the ALB to the EC2 instances while preventing access from any other source inside or outside the private subnet of the EC2 instances. Which solution will meet these requirements?
+
+- [ ] A. Configure a route in a route table to direct traffic from the internet to the private IP addresses of the EC2 instances.
+- [ ] B. Configure the security group for the EC2 instances to only allow traffic that comes from the security group for the ALB.
+- [ ] C. Move the EC2 instances into the public subnet. Give the EC2 instances a set of Elastic IP addresses.
+- [ ] D. Configure the security group for the ALB to allow any TCP traffic on any port.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Configure the security group for the EC2 instances to only allow traffic that comes from the security group for the ALB.
+
+Why these are the correct answers:
+
+B. Configure the security group for the EC2 instances to only allow traffic that comes from the security group for the ALB.
+
+Why are the other answers wrong?
+
+- [ ] A. Route table entries control routing, not security.
+- [ ] C. Moving instances to a public subnet is less secure.
+- [ ] D. Allowing any TCP traffic on the ALB's security group is insecure.
+</details>
+<details>
+  <summary>Question 283</summary>
+
+A research company runs experiments that are powered by a simulation application and a visualization application. The simulation application runs on Linux and outputs intermediate data to an NFS share every 5 minutes. The visualization application is a Windows desktop application that displays the simulation output and requires an SMB file system. The company maintains two synchronized file systems. This strategy is causing data duplication and inefficient resource usage. The company needs to migrate the applications to AWS without making code changes to either application. Which solution will meet these requirements?
+
+- [ ] A. Migrate both applications to AWS Lambda. Create an Amazon S3 bucket to exchange data between the applications.
+- [ ] B. Migrate both applications to Amazon Elastic Container Service (Amazon ECS). Configure Amazon FSx File Gateway for storage.
+- [ ] C. Migrate the simulation application to Linux Amazon EC2 instances. Migrate the visualization application to Windows EC2 instances. Configure Amazon Simple Queue Service (Amazon SQS) to exchange data between the applications.
+- [ ] D. Migrate the simulation application to Linux Amazon EC2 instances. Migrate the visualization application to Windows EC2 instances. Configure Amazon FSx for NetApp ONTAP for storage.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Migrate the simulation application to Linux Amazon EC2 instances. Migrate the visualization application to Windows EC2 instances. Configure Amazon FSx for NetApp ONTAP for storage.
+
+Why these are the correct answers:
+
+D. Migrate the simulation application to Linux Amazon EC2 instances. Migrate the visualization application to Windows EC2 instances. Configure Amazon FSx for NetApp ONTAP for storage.
+
+Why are the other answers wrong?
+
+- [ ] A. Lambda doesn't support NFS or SMB.
+- [ ] B. FSx File Gateway is for on-premises, not this use case.
+- [ ] C. SQS is for message queuing, not file sharing.
+</details>
+<details>
+  <summary>Question 284</summary>
+
+As part of budget planning, management wants a report of AWS billed items listed by user. The data will be used to create department budgets. A solutions architect needs to determine the most efficient way to obtain this report information. Which solution meets these requirements?
+
+- [ ] A. Run a query with Amazon Athena to generate the report.
+- [ ] B. Create a report in Cost Explorer and download the report.
+- [ ] C. Access the bill details from the billing dashboard and download the bill.
+- [ ] D. Modify a cost budget in AWS Budgets to alert with Amazon Simple Email Service (Amazon SES).
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Create a report in Cost Explorer and download the report.
+
+Why these are the correct answers:
+
+B. Create a report in Cost Explorer and download the report.
+
+Why are the other answers wrong?
+
+- [ ] A. Athena requires setup and SQL knowledge.
+- [ ] C. The billing dashboard doesn't provide user-level reports.
+- [ ] D. Budgets are for alerting, not detailed reporting.
+</details>
+<details>
+  <summary>Question 285</summary>
+
+A company hosts its static website by using Amazon S3. The company wants to add a contact form to its webpage. The contact form will have dynamic server-side components for users to input their name, email address, phone number, and user message. The company anticipates that there will be fewer than 100 site visits each month. Which solution will meet these requirements MOST cost-effectively?
+
+- [ ] A. Host a dynamic contact form page in Amazon Elastic Container Service (Amazon ECS). Set up Amazon Simple Email Service (Amazon SES) to connect to any third-party email provider.
+- [ ] B. Create an Amazon API Gateway endpoint with an AWS Lambda backend that makes a call to Amazon Simple Email Service (Amazon SES).
+- [ ] C. Convert the static webpage to dynamic by deploying Amazon Lightsail. Use client-side scripting to build the contact form. Integrate the form with Amazon WorkMail.
+- [ ] D. Create a t2.micro Amazon EC2 instance. Deploy a LAMP (Linux, Apache, MySQL, PHP/Perl/Python) stack to host the webpage. Use client-side scripting to build the contact form. Integrate the form with Amazon WorkMail.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Create an Amazon API Gateway endpoint with an AWS Lambda backend that makes a call to Amazon Simple Email Service (Amazon SES).
+
+Why these are the correct answers:
+
+B. Create an Amazon API Gateway endpoint with an AWS Lambda backend that makes a call to Amazon Simple Email Service (Amazon SES).
+
+Why are the other answers wrong?
+
+- [ ] A. ECS is overkill for a simple contact form.
+- [ ] C. Lightsail is more expensive than Lambda for this use case.
+- [ ] D. EC2 is too much overhead and cost for a simple form.
+</details>
+<details>
+  <summary>Question 286</summary>
+
+A company has a static website that is hosted on Amazon CloudFront in front of Amazon S3. The static website uses a database backend. The company notices that the website does not reflect updates that have been made in the website's Git repository. The company checks the continuous integration and continuous delivery $(Cl/CD)$ pipeline between the Git repository and Amazon S3. The company verifies that the webhooks are configured properly and that the CI/CD pipeline is sending messages that indicate successful deployments. A solutions architect needs to implement a solution that displays the updates on the website. Which solution will meet these requirements?
+
+- [ ] A. Add an Application Load Balancer.
+- [ ] B. Add Amazon ElastiCache for Redis or Memcached to the database layer of the web application.
+- [ ] C. Invalidate the CloudFront cache.
+- [ ] D. Use AWS Certificate Manager (ACM) to validate the website's SSL certificate.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Invalidate the CloudFront cache.
+
+Why these are the correct answers:
+
+C. Invalidate the CloudFront cache.
+
+Why are the other answers wrong?
+
+- [ ] A. ALB is for dynamic content, not static.
+- [ ] B. ElastiCache is for database caching, not static content.
+- [ ] D. ACM is for SSL certificates, not content updates.
+</details>
+<details>
+  <summary>Question 287</summary>
+
+A company wants to migrate a Windows-based application from on premises to the AWS Cloud. The application has three tiers: an application tier, a business tier, and a database tier with Microsoft SQL Server. The company wants to use specific features of SQL Server such as native backups and Data Quality Services. The company also needs to share files for processing between the tiers. How should a solutions architect design the architecture to meet these requirements?
+
+- [ ] A. Host all three tiers on Amazon EC2 instances. Use Amazon FSx File Gateway for file sharing between the tiers.
+- [ ] B. Host all three tiers on Amazon EC2 instances. Use Amazon FSx for Windows File Server for file sharing between the tiers.
+- [ ] C. Host the application tier and the business tier on Amazon EC2 instances. Host the database tier on Amazon RDS. Use Amazon Elastic File System (Amazon EFS) for file sharing between the tiers.
+- [ ] D. Host the application tier and the business tier on Amazon EC2 instances. Host the database tier on Amazon RDS. Use a Provisioned IOPS SSD (io2) Amazon Elastic Block Store (Amazon EBS) volume for file sharing between the tiers.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Host all three tiers on Amazon EC2 instances. Use Amazon FSx for Windows File Server for file sharing between the tiers.
+
+Why these are the correct answers:
+
+B. Host all three tiers on Amazon EC2 instances. Use Amazon FSx for Windows File Server for file sharing between the tiers.
+
+Why are the other answers wrong?
+
+- [ ] A. FSx File Gateway is for on-premises integration.
+- [ ] C. RDS doesn't support all SQL Server features. EFS is for Linux.
+- [ ] D. RDS doesn't support all SQL Server features. EBS is for block storage, not file sharing.
+</details>
+<details>
+  <summary>Question 288</summary>
+
+A company is migrating a Linux-based web server group to AWS. The web servers must access files in a shared file store for some content. The company must not make any changes to the application. What should a solutions architect do to meet these requirements?
+
+- [ ] A. Create an Amazon S3 Standard bucket with access to the web servers.
+- [ ] B. Configure an Amazon CloudFront distribution with an Amazon S3 bucket as the origin.
+- [ ] C. Create an Amazon Elastic File System (Amazon EFS) file system. Mount the EFS file system on all web servers.
+- [ ] D. Configure a General Purpose SSD (gp3) Amazon Elastic Block Store (Amazon EBS) volume. Mount the EBS volume to all web servers.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Create an Amazon Elastic File System (Amazon EFS) file system. Mount the EFS file system on all web servers.
+
+Why these are the correct answers:
+
+C. Create an Amazon Elastic File System (Amazon EFS) file system. Mount the EFS file system on all web servers.
+
+Why are the other answers wrong?
+
+- [ ] A. S3 is object storage, not a file system.
+- [ ] B. CloudFront is for caching, not file sharing.
+- [ ] D. EBS is block storage, not a shared file system.
+</details>
+<details>
+  <summary>Question 289</summary>
+
+A company has an AWS Lambda function that needs read access to an Amazon S3 bucket that is located in the same AWS account. Which solution will meet these requirements in the MOST secure manner?
+
+- [ ] A. Apply an S3 bucket policy that grants read access to the S3 bucket.
+- [ ] B. Apply an IAM role to the Lambda function. Apply an IAM policy to the role to grant read access to the S3 bucket.
+- [ ] C. Embed an access key and a secret key in the Lambda function's code to grant the required IAM permissions for read access to the S3 bucket.
+- [ ] D. Apply an IAM role to the Lambda function. Apply an IAM policy to the role to grant read access to all S3 buckets in the account.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Apply an IAM role to the Lambda function. Apply an IAM policy to the role to grant read access to the S3 bucket.
+
+Why these are the correct answers:
+
+B. Apply an IAM role to the Lambda function. Apply an IAM policy to the role to grant read access to the S3 bucket.
+
+Why are the other answers wrong?
+
+- [ ] A. Bucket policies grant access to principals, not Lambda functions directly.
+- [ ] C. Embedding keys in code is highly insecure.
+- [ ] D. Granting access to all S3 buckets is least privilege violation.
+</details>
+<details>
+  <summary>Question 290</summary>
+
+A company hosts a web application on multiple Amazon EC2 instances. The EC2 instances are in an Auto Scaling group that scales in response to user demand. The company wants to optimize cost savings without making a long-term commitment. Which EC2 instance purchasing option should a solutions architect recommend to meet these requirements?
+
+- [ ] A. Dedicated Instances only
+- [ ] B. On-Demand Instances only
+- [ ] C. A mix of On-Demand Instances and Spot Instances
+- [ ] D. A mix of On-Demand Instances and Reserved Instances
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. A mix of On-Demand Instances and Spot Instances
+
+Why these are the correct answers:
+
+C. A mix of On-Demand Instances and Spot Instances
+
+Why are the other answers wrong?
+
+- [ ] A. Dedicated Instances are the most expensive.
+- [ ] B. On-Demand are expensive for sustained use.
+- [ ] D. Reserved Instances require a commitment.
+</details>
+
+<details>
+  <summary>Question 291</summary>
+
+A media company uses Amazon CloudFront for its publicly available streaming video content. The company wants to secure the video content that is hosted in Amazon S3 by controlling who has access. Some of the company's users are using a custom HTTP client that does not support cookies. Some of the company's users are unable to change the hardcoded URLs that they are using for access. Which services or methods will meet these requirements with the LEAST impact to the users? (Choose two.)
+
+- [ ] A. Signed cookies
+- [ ] B. Signed URLs
+- [ ] C. AWS AppSync
+- [ ] D. JSON Web Token (JWT)
+- [ ] E. AWS Secrets Manager
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Signed cookies
+- [ ] B. Signed URLs
+
+Why these are the correct answers:
+
+A. Signed cookies
+B. Signed URLs
+
+Why are the other answers wrong?
+
+- [ ] C. AWS AppSync is for GraphQL APIs, not content delivery.
+- [ ] D. JWTs are for API authentication, not CloudFront access control.
+- [ ] E. Secrets Manager is for storing secrets, not content access.
+</details>
+<details>
+  <summary>Question 292</summary>
+
+A company is preparing a new data platform that will ingest real-time streaming data from multiple sources. The company needs to transform the data before writing the data to Amazon S3. The company needs the ability to use SQL to query the transformed data. Which solutions will meet these requirements? (Choose two.)
+
+- [ ] A. Use Amazon Kinesis Data Streams to stream the data. Use Amazon Kinesis Data Analytics to transform the data. Use Amazon Kinesis Data Firehose to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
+- [ ] B. Use Amazon Managed Streaming for Apache Kafka (Amazon MSK) to stream the data. Use AWS Glue to transform the data and to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
+- [ ] C. Use AWS Database Migration Service (AWS DMS) to ingest the data. Use Amazon EMR to transform the data and to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
+- [ ] D. Use Amazon Managed Streaming for Apache Kafka (Amazon MSK) to stream the data. Use Amazon Kinesis Data Analytics to transform the data and to write the data to Amazon S3. Use the Amazon RDS query editor to query the transformed data from Amazon S3.
+- [ ] E. Use Amazon Kinesis Data Streams to stream the data. Use AWS Glue to transform the data. Use Amazon Kinesis Data Firehose to write the data to Amazon S3. Use the Amazon RDS query editor to query the transformed data from Amazon S3.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Use Amazon Kinesis Data Streams to stream the data. Use Amazon Kinesis Data Analytics to transform the data. Use Amazon Kinesis Data Firehose to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
+- [ ] B. Use Amazon Managed Streaming for Apache Kafka (Amazon MSK) to stream the data. Use AWS Glue to transform the data and to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
+
+Why these are the correct answers:
+
+A. Use Amazon Kinesis Data Streams to stream the data. Use Amazon Kinesis Data Analytics to transform the data. Use Amazon Kinesis Data Firehose to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
+B. Use Amazon Managed Streaming for Apache Kafka (Amazon MSK) to stream the data. Use AWS Glue to transform the data and to write the data to Amazon S3. Use Amazon Athena to query the transformed data from Amazon S3.
+
+Why are the other answers wrong?
+
+- [ ] C. DMS is for database migration, not streaming data ingestion. EMR is for big data processing, not simple transformations.
+- [ ] D. RDS query editor is for RDS databases, not S3 data.
+- [ ] E. RDS query editor is for RDS databases, not S3 data.
+</details>
+<details>
+  <summary>Question 293</summary>
+
+A company has an on-premises volume backup solution that has reached its end of life. The company wants to use AWS as part of a new backup solution and wants to maintain local access to all the data while it is backed up on AWS. The company wants to ensure that the data backed up on AWS is automatically and securely transferred. Which solution meets these requirements?
+
+- [ ] A. Use AWS Snowball to migrate data out of the on-premises solution to Amazon S3. Configure on-premises systems to mount the Snowball S3 endpoint to provide local access to the data.
+- [ ] B. Use AWS Snowball Edge to migrate data out of the on-premises solution to Amazon S3. Use the Snowball Edge file interface to provide on-premises systems with local access to the data.
+- [ ] C. Use AWS Storage Gateway and configure a cached volume gateway. Run the Storage Gateway software appliance on premises and configure a percentage of data to cache locally. Mount the gateway storage volumes to provide local access to the data.
+- [ ] D. Use AWS Storage Gateway and configure a stored volume gateway. Run the Storage Gateway software appliance on premises and map the gateway storage volumes to on-premises storage. Mount the gateway storage volumes to provide local access to the data.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Use AWS Storage Gateway and configure a stored volume gateway. Run the Storage Gateway software appliance on premises and map the gateway storage volumes to on-premises storage. Mount the gateway storage volumes to provide local access to the data.
+
+Why these are the correct answers:
+
+D. Use AWS Storage Gateway and configure a stored volume gateway. Run the Storage Gateway software appliance on premises and map the gateway storage volumes to on-premises storage. Mount the gateway storage volumes to provide local access to the data.
+
+Why are the other answers wrong?
+
+- [ ] A. Snowball is for large data transfers, not ongoing backups with local access.
+- [ ] B. Snowball Edge is for edge computing, not primary backup storage.
+- [ ] C. Cached volumes keep frequently accessed data on-premises, not all data.
+</details>
+<details>
+  <summary>Question 294</summary>
+
+An application that is hosted on Amazon EC2 instances needs to access an Amazon S3 bucket. Traffic must not traverse the internet. How should a solutions architect configure access to meet these requirements?
+
+- [ ] A. Create a private hosted zone by using Amazon Route 53.
+- [ ] B. Set up a gateway VPC endpoint for Amazon S3 in the VPC.
+- [ ] C. Configure the EC2 instances to use a NAT gateway to access the S3 bucket.
+- [ ] D. Establish an AWS Site-to-Site VPN connection between the VPC and the S3 bucket.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Set up a gateway VPC endpoint for Amazon S3 in the VPC.
+
+Why these are the correct answers:
+
+B. Set up a gateway VPC endpoint for Amazon S3 in the VPC.
+
+Why are the other answers wrong?
+
+- [ ] A. Route 53 is for DNS, not network traffic.
+- [ ] C. NAT gateway uses the internet.
+- [ ] D. VPN is for connecting networks, not accessing S3.
+</details>
+<details>
+  <summary>Question 295</summary>
+
+An ecommerce company stores terabytes of customer data in the AWS Cloud. The data contains personally identifiable information (PII). The company wants to use the data in three applications. Only one of the applications needs to process the PII. The Pll must be removed before the other two applications process the data. Which solution will meet these requirements with the LEAST operational overhead?
+
+- [ ] A. Store the data in an Amazon DynamoDB table. Create a proxy application layer to intercept and process the data that each application requests.
+- [ ] B. Store the data in an Amazon S3 bucket. Process and transform the data by using S3 Object Lambda before returning the data to the requesting application.
+- [ ] C. Process the data and store the transformed data in three separate Amazon S3 buckets so that each application has its own custom dataset. Point each application to its respective S3 bucket.
+- [ ] D. Process the data and store the transformed data in three separate Amazon DynamoDB tables so that each application has its own custom dataset. Point each application to its respective DynamoDB table.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Store the data in an Amazon S3 bucket. Process and transform the data by using S3 Object Lambda before returning the data to the requesting application.
+
+Why these are the correct answers:
+
+B. Store the data in an Amazon S3 bucket. Process and transform the data by using S3 Object Lambda before returning the data to the requesting application.
+
+Why are the other answers wrong?
+
+- [ ] A. Proxy application adds complexity.
+- [ ] C. Creating and managing multiple S3 buckets adds overhead.
+- [ ] D. DynamoDB is not ideal for large data storage and transformation.
+</details>
+<details>
+  <summary>Question 296</summary>
+
+A development team has launched a new application that is hosted on Amazon EC2 instances inside a development VPC. A solutions architect needs to create a new VPC in the same account. The new VPC will be peered with the development VPC. The VPC CIDR block for the development VPC is $192.168.0.0/24.$ The solutions architect needs to create a CIDR block for the new VPC. The CIDR block must be valid for a VPC peering connection to the development VPC. What is the SMALLEST CIDR block that meets these requirements?
+
+- [ ] A. $10.0.1.0/32$
+- [ ] B. $192.168.0.0/24$
+- [ ] C. $192.168.1.0/32$
+- [ ] D. $10.0.1.0/24$
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. $10.0.1.0/24$
+
+Why these are the correct answers:
+
+D. $10.0.1.0/24$
+
+Why are the other answers wrong?
+
+- [ ] A. /32 is too small.
+- [ ] B. Overlapping CIDR.
+- [ ] C. Overlapping CIDR and /32 is too small.
+</details>
+<details>
+  <summary>Question 297</summary>
+
+A company deploys an application on five Amazon EC2 instances. An Application Load Balancer (ALB) distributes traffic to the instances by using a target group. The average CPU usage on each of the instances is below 10% most of the time, with occasional surges to 65%. A solutions architect needs to implement a solution to automate the scalability of the application. The solution must optimize the cost of the architecture and must ensure that the application has enough CPU resources when surges occur. Which solution will meet these requirements?
+
+- [ ] A. Create an Amazon CloudWatch alarm that enters the ALARM state when the CPUUtilization metric is less than 20%. Create an AWS Lambda function that the CloudWatch alarm invokes to terminate one of the EC2 instances in the ALB target group.
+- [ ] B. Create an EC2 Auto Scaling group. Select the existing ALB as the load balancer and the existing target group as the target group. Set a target tracking scaling policy that is based on the ASGAverageCPUUtilization metric. Set the minimum instances to 2, the desired capacity to 3, the maximum instances to 6, and the target value to 50%. Add the EC2 instances to the Auto Scaling group.
+- [ ] C. Create an EC2 Auto Scaling group. Select the existing ALB as the load balancer and the existing target group as the target group. Set the minimum instances to 2, the desired capacity to 3, and the maximum instances to 6. Add the EC2 instances to the Auto Scaling group.
+- [ ] D. Create two Amazon CloudWatch alarms. Configure the first CloudWatch alarm to enter the ALARM state when the average CPUUtilization metric is below 20%. Configure the second CloudWatch alarm to enter the ALARM state when the average CPUUtilization matric is above 50%. Configure the alarms to publish to an Amazon Simple Notification Service (Amazon SNS) topic to send an email message. After receiving the message, log in to decrease or increase the number of EC2 instances that are running.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Create an EC2 Auto Scaling group. Select the existing ALB as the load balancer and the existing target group as the target group. Set a target tracking scaling policy that is based on the ASGAverageCPUUtilization metric. Set the minimum instances to 2, the desired capacity to 3, the maximum instances to 6, and the target value to 50%. Add the EC2 instances to the Auto Scaling group.
+
+Why these are the correct answers:
+
+B. Create an EC2 Auto Scaling group. Select the existing ALB as the load balancer and the existing target group as the target group. Set a target tracking scaling policy that is based on the ASGAverageCPUUtilization metric. Set the minimum instances to 2, the desired capacity to 3, the maximum instances to 6, and the target value to 50%. Add the EC2 instances to the Auto Scaling group.
+
+Why are the other answers wrong?
+
+- [ ] A. Lambda is for serverless, not scaling EC2.
+- [ ] C. Missing target tracking for automation.
+- [ ] D. Manual intervention is not automated.
+</details>
+<details>
+  <summary>Question 298</summary>
+
+A company is running a critical business application on Amazon EC2 instances behind an Application Load Balancer. The EC2 instances run in an Auto Scaling group and access an Amazon RDS DB instance. The design did not pass an operational review because the EC2 instances and the DB instance are all located in a single Availability Zone. A solutions architect must update the design to use a second Availability Zone. Which solution will make the application highly available?
+
+- [ ] A. Provision a subnet in each Availability Zone. Configure the Auto Scaling group to distribute the EC2 instances across both Availability Zones. Configure the DB instance with connections to each network.
+- [ ] B. Provision two subnets that extend across both Availability Zones. Configure the Auto Scaling group to distribute the EC2 instances across both Availability Zones. Configure the DB instance with connections to each network.
+- [ ] C. Provision a subnet in each Availability Zone. Configure the Auto Scaling group to distribute the EC2 instances across both Availability Zones. Configure the DB instance for Multi-AZ deployment.
+- [ ] D. Provision a subnet that extends across both Availability Zones. Configure the Auto Scaling group to distribute the EC2 instances across both Availability Zones. Configure the DB instance for Multi-AZ deployment.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Provision a subnet in each Availability Zone. Configure the Auto Scaling group to distribute the EC2 instances across both Availability Zones. Configure the DB instance for Multi-AZ deployment.
+
+Why these are the correct answers:
+
+C. Provision a subnet in each Availability Zone. Configure the Auto Scaling group to distribute the EC2 instances across both Availability Zones. Configure the DB instance for Multi-AZ deployment.
+
+Why are the other answers wrong?
+
+- [ ] A. RDS needs Multi-AZ for HA, not just connections.
+- [ ] B. Subnets cannot span AZs.
+- [ ] D. Subnets cannot span AZs.
+</details>
+<details>
+  <summary>Question 299</summary>
+
+A research laboratory needs to process approximately 8 TB of data. The laboratory requires sub-millisecond latencies and a minimum throughput of 6 GBps for the storage subsystem. Hundreds of Amazon EC2 instances that run Amazon Linux will distribute and process the data. Which solution will meet the performance requirements?
+
+- [ ] A. Create an Amazon FSx for NetApp ONTAP file system. Sat each volume' tiering policy to ALL. Import the raw data into the file system. Mount the fila system on the EC2 instances.
+- [ ] B. Create an Amazon S3 bucket to store the raw data. Create an Amazon FSx for Lustre file system that uses persistent SSD storage. Select the option to import data from and export data to Amazon S3. Mount the file system on the EC2 instances.
+- [ ] C. Create an Amazon S3 bucket to store the raw data. Create an Amazon FSx for Lustre file system that uses persistent HDD storage. Select the option to import data from and export data to Amazon S3. Mount the file system on the EC2 instances.
+- [ ] D. Create an Amazon FSx for NetApp ONTAP file system. Set each volume's tiering policy to NONE. Import the raw data into the file system. Mount the file system on the EC2 instances.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Create an Amazon S3 bucket to store the raw data. Create an Amazon FSx for Lustre file system that uses persistent SSD storage. Select the option to import data from and export data to Amazon S3. Mount the file system on the EC2 instances.
+
+Why these are the correct answers:
+
+B. Create an Amazon S3 bucket to store the raw data. Create an Amazon FSx for Lustre file system that uses persistent SSD storage. Select the option to import data from and export data to Amazon S3. Mount the file system on the EC2 instances.
+
+Why are the other answers wrong?
+
+- [ ] A. FSx for ONTAP may not provide the required throughput.
+- [ ] C. HDD storage does not meet the latency requirement.
+- [ ] D. FSx for ONTAP with NONE tiering is not cost-effective.
+</details>
 
 
 
